still fixing links

--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -31,3 +31,8 @@ layout: default
     {% endfor %}
   </div>
 {% endif %}
+
+<div class="navigation">
+  <p><a href="{{ site.baseurl }}/seasons/{{ page.season }}.html">Back to Season</a></p>
+  <p><a href="{{ site.baseurl }}/index.html">All Seasons</a></p>
+</div>
