data file was incorrectly named.

--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <ul>
-  {% assign season_games = site.data.eagles | where: "season", page.season %}
+  {% assign season_games = site.data.eagles_4th_downs_all_time | where: "season", page.season %}
   {% assign games = season_games | map: "game_id" | uniq %}
   {% for gid in games %}
     {% assign game_plays = season_games | where: "game_id", gid %}
