--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -19,7 +19,7 @@ first play: {{ season_games | first | inspect }}
 {% for game in games %}
   {% assign first_play = game.items[0] %}
   <li>
-    <a href="{{ site.baseurl }}/games/{{ first_play.game_id | downcase | replace: '_', '-' }}.html"></a>
+    <a href="{{ site.baseurl }}/games/{{ first_play.game_id | downcase | replace: '_', '-' }}.html">
         Week {{ first_play.week }} — {{ first_play.away_team }} at {{ first_play.home_team }}
     </a>
   </li>
