--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/assets/css/style.css">
 </head>
-<body>
+<body class="index">
   <main>
     {{ content }}
   </main>
