Responsive design basics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/style.css">
 </head>
-<body class="index">
+<body class="{{ page.layout }}">
   <main>
     {{ content }}
   </main>
