--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -8,22 +8,28 @@ layout: default
 
 <div class="plays">
   {% for play in plays %}
-    <div class="play">
-      <div><span class="label">Quarter:</span> <span class="value">Q{{ play.qtr }}</span></div>
-      <div><span class="label">Down & Distance:</span> <span class="value">4th & {{ play.ydstogo }}</span></div>
-      <div><span class="label">Field Position:</span> <span class="value">{{ play.yardline_100 }}</span></div>
-      <div><span class="label">Time Remaining (Quarter):</span> <span class="value">{{ play.quarter_seconds_remaining }}s</span></div>
-      <div><span class="label">Description:</span> <span class="value"><code>{{ play.desc }}</code></span></div>
-      <div><span class="label">Actual Decision:</span> <span class="value">{{ play.actual_decision }}</span></div>
-      <div><span class="label">Model Recommendation:</span> <span class="value">{{ play.model_recommendation }}</span></div>
-      <div><span class="label">Go WP:</span> <span class="value">{{ play.go_wp }}</span></div>
-      <div><span class="label">Punt WP:</span> <span class="value">{{ play.punt_wp }}</span></div>
-      <div><span class="label">FG WP:</span> <span class="value">{{ play.fg_wp }}</span></div>
-      <div><span class="label">First Down %:</span> <span class="value">{{ play.first_down_prob }}</span></div>
-      <div><span class="label">FG Make %:</span> <span class="value">{{ play.fg_make_prob }}</span></div>
-      <div><span class="label">WP If Succeed:</span> <span class="value">{{ play.wp_succeed }}</span></div>
-      <div><span class="label">WP If Fail:</span> <span class="value">{{ play.wp_fail }}</span></div>
-      <div><span class="label">Go Boost:</span> <span class="value">{{ play.go_boost }}</span></div>
+    <div class="play-row full-width">
+      <div class="play">
+        <div><span class="label">Quarter:</span> <span class="value">Q{{ play.qtr }}</span></div>
+        <div><span class="label">Down & Distance:</span> <span class="value">4th & {{ play.ydstogo }}</span></div>
+        <div><span class="label">Field Position:</span> <span class="value">{{ play.yardline_100 }}</span></div>
+        <div><span class="label">Time Remaining (Quarter):</span> <span class="value">
+          {% assign mins = play.quarter_seconds_remaining | divided_by: 60 %}
+          {% assign secs = play.quarter_seconds_remaining | modulo: 60 %}
+          {{ mins }}:{% if secs < 10 %}0{% endif %}{{ secs }}
+        </span></div>
+        <div><span class="label">Description:</span> <span class="value"><code>{{ play.desc }}</code></span></div>
+        <div><span class="label">Actual Decision:</span> <span class="value">{{ play.actual_decision }}</span></div>
+        <div><span class="label">Model Recommendation:</span> <span class="value">{{ play.model_recommendation }}</span></div>
+        <div><span class="label">Go WP:</span> <span class="value">{% if play.go_wp != "NA" %}{{ play.go_wp | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">Punt WP:</span> <span class="value">{% if play.punt_wp != "NA" %}{{ play.punt_wp | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">FG WP:</span> <span class="value">{% if play.fg_wp != "NA" %}{{ play.fg_wp | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">First Down %:</span> <span class="value">{% if play.first_down_prob != "NA" %}{{ play.first_down_prob | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">FG Make %:</span> <span class="value">{% if play.fg_make_prob != "NA" %}{{ play.fg_make_prob | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">WP If Succeed:</span> <span class="value">{% if play.wp_succeed != "NA" %}{{ play.wp_succeed | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">WP If Fail:</span> <span class="value">{% if play.wp_fail != "NA" %}{{ play.wp_fail | round: 3 }}{% endif %}</span></div>
+        <div><span class="label">Go Boost:</span> <span class="value">{% if play.go_boost != "NA" %}{{ play.go_boost | round: 3 }}{% endif %}</span></div>
+      </div>
     </div>
     <hr/>
   {% endfor %}
