--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,3 +135,30 @@ hr {
   display: block;
   margin-top: 0.3rem;
 }
+
+/* Top navigation (W3Schools style) */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
