updated nav colors to match rest of site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,11 +154,11 @@ hr {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: silver;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: var(--kelly-green);
   color: white;
 }
