--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,9 @@
 <body class="{{ page.layout }}">
   <div class="nav-container">
     <div class="topnav">
-      <a href="{{ site.baseurl }}/" {% if page.url == "/" %}class="active"{% endif %}>Home</a>
+      <a href="{{ site.baseurl }}/" {% if page.url == "/" %}class="active"{% endif %}>Seasons</a>
       <a href="{{ site.baseurl }}/data.html" {% if page.url == "/data.html" %}class="active"{% endif %}>Data</a>
+      <a href="{{ site.baseurl }}/live.html" {% if page.url == "/live.html" %}class="active"{% endif %}>Live</a>
     </div>
   </div>
   <main>
