--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,9 @@ h1 {
   width: 25%;
 }
 
+.tile-play-status div:nth-child(2) {
+  margin-bottom: 1rem;}
+
 .tile-play-description {
   width: 30%;
   font-size: smaller;
@@ -86,7 +89,6 @@ h1 {
   width: 90%;
   border-collapse: collapse;
   margin-top: 1rem;
-
 }
 
 .tile-play-table {
